<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gradient_start"
    tools:context=".activities.HomeActivity">

    <!-- Animated Banner -->
    <LinearLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/banner_background"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/banner_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_banner_logo" />

        <TextView
            android:id="@+id/banner_title"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/app_name"
            android:textColor="@color/white" />

    </LinearLayout>

    <!-- Grid of Cards -->
    <GridLayout
        android:id="@+id/home_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/banner_container"
        android:layout_marginTop="@dimen/spacing_large"
        android:columnCount="2"
        android:padding="@dimen/spacing_medium">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/grammar_card"
            style="@style/HomeCard">

            <TextView
                style="@style/Home.IconButton"
                android:drawableTop="@drawable/ic_grammar"
                android:text="@string/home_card_grammar" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/summarizer_card"
            style="@style/HomeCard">

            <TextView
                style="@style/Home.IconButton"
                android:drawableTop="@drawable/ic_summarize"
                android:text="@string/home_card_summarizer" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/history_card"
            style="@style/HomeCard">

            <TextView
                style="@style/Home.IconButton"
                android:drawableTop="@drawable/ic_history"
                android:text="@string/home_card_history" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/profile_card"
            style="@style/HomeCard">

            <TextView
                style="@style/Home.IconButton"
                android:drawableTop="@drawable/ic_profile_placeholder"
                android:text="@string/home_card_profile" />

        </com.google.android.material.card.MaterialCardView>

    </GridLayout>

</RelativeLayout>
